# ai-wiki

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  NOTICE  README.md  pyproject.toml  run-local.sh
skills/ai-wiki/: SKILL.md
src/aiwiki/: __init__.py
src/aiwiki/cli/: __init__.py  main.py
src/aiwiki/engine/: __init__.py  append_log.py  backfill_sources.py  gen_indexes.py  lint.py  render_viz.py  route.py  scan_sources.py  update_concept.py  validate.py
src/aiwiki/runtime/: __init__.py  curate.py
src/aiwiki/service/: __init__.py  __main__.py  app.py  bundle.py  ingest.py  worker.py
tests/: test_cli_bundles.py  test_curate_git.py  test_ingest.py  test_service_multibundle.py  test_smoke.py  test_worker.py
