[project]
name = "ai-wiki"
version = "0.0.1"
description = "Hosted, agent-maintained OKF knowledge service (engine + CLI + API)."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Scorpion1221" }]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
service = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "httpx>=0.27",          # fastapi TestClient
]

# Deterministic engine CLIs + the ai-wiki client. Each maps to a `main(argv=None)`.
[project.scripts]
ai-wiki = "aiwiki.cli.main:main"
okf-validate = "aiwiki.engine.validate:main"
okf-scan-sources = "aiwiki.engine.scan_sources:main"
okf-update-concept = "aiwiki.engine.update_concept:main"
okf-lint = "aiwiki.engine.lint:main"
okf-gen-indexes = "aiwiki.engine.gen_indexes:main"
okf-append-log = "aiwiki.engine.append_log:main"
okf-backfill-sources = "aiwiki.engine.backfill_sources:main"
okf-route = "aiwiki.engine.route:main"
okf-render-viz = "aiwiki.engine.render_viz:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aiwiki"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
